# onedatarestfsspec

./: .gitignore  .gitlab-ci.yml  .pylintrc  Makefile  README.md  ct_run.py  onedatafsspec-tests-results.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_usage.py
onedatafsspec/: __init__.py  config.py  core.py  utils.py
onedatarestfsspec/: config.py  core.py  metrics.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_core.py  test_env_config.yaml  test_fs.py  test_onedatafsspec.py  test_onedatarestfsspec.py  test_utils.py
