[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "onedatarestfsspec"
version = "25.0.0"
authors = [
    {name = "Bartek Kryza", email = "bkryza@gmail.com"},
]
description = "Onedata filesystem REST implementation for fsspec"
readme = "README.md"
license = {text = "MIT"}
keywords = ["fsspec", "Onedata", "filesystem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.10"
dependencies = [
    "fsspec>=2026.1.0",
    "onedatafilerestclient>=25.0.0",
]

[project.optional-dependencies]
monitoring = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "pytest-mock>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/onedata/onedatarestfsspec"
Repository = "https://github.com/onedata/onedatarestfsspec"

[project.entry-points."fsspec.specs"]
onedata = "onedatarestfsspec.core:OnedataFileSystem"

[tool.setuptools.packages.find]
include = ["onedatarestfsspec*"]

[tool.setuptools.package-data]
onedatarestfsspec = ["*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests requiring real Onedata deployment (deselect with '-m \"not integration\"')",
]
